<resources>
    <string-array name="textView_id">

        <item> Hindi_text</item>
        <item> English_text</item>

    </string-array>
    <string name="my_app_id">my_app-cfjpb</string>
    <string-array name="community">
        <item>Select</item>
        <item>General</item>
        <item>OBC</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
    <string-array name="application_category">
        <item>Select</item>
        <item>Primary Teacher</item>
        <item>Trained Graduate Teacher</item>
    </string-array>
    <string-array name="language_choice">
        <item>Select</item>
        <item>Telugu</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>
    <string-array name="language">
        <item>ENGLISH</item>
        <item>हिन्दी</item>
    </string-array>
    <string-array name="min_qualification">
        <item>Select</item>
        <item>XII</item>
        <item>Graduation</item>
    </string-array>
    <string-array name="prof_qualification">
        <item>Select</item>
        <item>BA B.Ed</item>
        <item>BSc B.Ed</item>
    </string-array>
    <string-array name="states">
        <item>Select</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu And Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerela</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Telangana</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="app_name" translatable="false">STET</string>
    <string name="app_firebase_channel_id" translatable="false">default_channel</string>
    <string name="api_url" translatable="false">https://project-stet.herokuapp.com/</string>
    <string name="application_no">Application Number</string>
    <string name="enter_application_no">Enter Application Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">Todo</string>
    <string name="enter_text_shown_in_image">Enter the text shown in the image</string>
    <string name="global__signin">Sign In</string>
    <string name="forget_password">Forgot Password</string>
    <string name="forget_application_no">Forgot Application Number</string>
    <string name="global__stet_title">Teacher Eligibility Test-2021</string>
    <string name="homepage_about">About Telangana TET</string>
    <string name="homepage_content">Contents</string>
    <string name="homepage_about_content">Telangana Teacher Eligibility Test is one of the prestigious teaching examination of the state Telangana. Each year, several candidates appear for this exam, and only a few candidates are able to qualify the exam.</string>
    <string name="homepage_overview">Overview of Telangana TET</string>
    <string name="homepage_admitCard">Telangana TET-2021 Admit Card</string>
    <string name="homepage_admitCard_content">After the application process is over, candidates can download their Telangana TET admit card 2021. Once the official notification of admit card is released, candidates are advised to visit this page</string>
    <string name="homepage_examPattern">Telangana TET-2021 Exam Pattern</string>
    <string name="homepage_syllabus">Telangana TET-2021 Syllabus</string>
    <string name="homepage_prepare">How to prepare for Telangana TET-2021?</string>
    <string name="homepage_applicationForm">Telangana TET-2021 Application Form</string>
    <string name="homepage_eligibilityCriteria">Telangana TET-2021 Eligibility Criteria</string>
    <string name="homepage_timeline">Telangana TET-2021 Timeline</string>
    <string name="homepage_clickhere">CLICK HERE</string>
    <string name="homepage_apply">To Check Your Profile</string>
    <string name="examPattern">An applicant who intends to participate in both the categories (Primary and Graduate) will have to apply and sit in both the papers separately and pay the fee for both the tests. Both Level I and Level II (i.e. for Primary and Graduate teacher) are conducted on the same day. </string>
    <string name="examPattern_1">Exam Mode:</string>
    <string name="examPattern_3">Exam Type:</string>
    <string name="examPattern_4">Objective type (MCQs)</string>
    <string name="examPattern_5">Total no. of questions:</string>
    <string name="examPattern_6">150</string>
    <string name="examPattern_7">Marking Scheme:</string>
    <string name="examPattern_8">1 mark for each correct answer</string>
    <string name="examPattern_9">Negative Marking:</string>
    <string name="examPattern_10">There will be no negative marking</string>
    <string name="examPattern_11">Exam Duration:</string>
    <string name="examPattern_12">2.30 hours</string>
    <string name="examPattern_13">Exam Time:</string>
    <string name="examPattern_14">10:00 am to 03:30 pm</string>
    <string name="prepare_content1">Telangana Teacher Eligibility Test is one of the prestigious teaching examination of the state Telangana. Each year, several candidates appear for this exam, and only a few candidates are able to qualify the exam. It will be helpful for those candidates who are appearing for the exam to refer to the preparation strategies of TET qualified candidates. Customize their strategies as per the requirement and start the preparation of the exam.</string>
    <string name="prepare_content2">Time management during the preparation of STET exam is crucial. It is necessary to manage time between studying and revision. Each section of syllabus must get enough time to practise. Also, it becomes vital to revise topics with previous year papers to keep them fresh in mind.</string>
    <string name="prepare_content3">Along with hard work, smart work is also crucial for the STET preparation. It becomes necessary to identify the important topics for the exam. Practise STET previous year question papers and note down the important topics and frequently asked questions of the exam. Candidates can also start their preparation with these important section and questions.</string>
    <string name="application_form_content1">Before filling the application form, candidates must keep the following things ready:</string>
    <string name="application_form_content2">Receipt of payment</string>
    <string name="application_form_content3">Scanned or digital photograph</string>
    <string name="application_form_content4">Scanned signature of the candidate</string>
    <string name="application_form_content5">Working e-mail and mobile number</string>
    <string name="application_form_content6">Application Fee</string>
    <string name="application_form_content7">Candidates have to pay Rs.400/- as application fee.</string>
    <string name="application_form_content8">Application fee can only be submitted online.</string>
    <string name="eligibility_criteria_content1">Candidates who are fulfilling the Eligibility Criteria set by officials will be able to sit for the Exam, others will be rejected at the time of scrutiny of documents. Here we have mentioned the eligibility criteria for STET Telangana Exam 2021.</string>
    <string name="eligibility_criteria_content2">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC (Central), OBC (State) and passed the final year of 2 years of D. El. Ed . OR</string>
    <string name="eligibility_criteria_content3">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC(Central), OBC(State) and passed in the final year of 4 years B. Ed. OR</string>
    <string name="eligibility_criteria_content4">12th or its equivalent with a minimum of 50% marks in aggregate and 45 % in case of SC, ST, OBC (Central), OBC(State) and passed in final year of 2 years Diploma in Education ( Special Education).</string>
    <string name="eligibility_criteria_content5">B.A./B.Sc. with 50% in aggregate marks for unreserved candidates and 45 % in case of SC, ST, OBC(Central), OBC (State). With this, candidates must have passed the final year of 2 years Diploma in Elementary Education (D. El. Ed.). OR</string>
    <string name="eligibility_criteria_content6">B.A./B.Sc. with 50 % marks in aggregate for unreserved candidates and 45 % in case of SC, ST, OBC(Central),OBC(State) and passed in final year of 1/ 2 year Bachelor in Education (B. Ed.). OR</string>
    <string name="eligibility_criteria_content7">12th or its equivalent with a minimum of 50% marks in aggregate for unreserved candidates and 45 % for SC, ST, OBC (Central), OBC (State) and have passed in the final year of 2 years in Diploma in Elementary Education ( D. El. Ed), OR</string>
    <string name="eligibility_criteria_content8">12th or its equivalent with a minimum 0f 50% marks for unreserved category and 45% marks in case of Sc, ST, OBC (Central), OBc (State) and passed or appearing in final year of 04 years B. A.Ed/B.Sc.Ed or B.A/B.Sc.Ed</string>
    <string name="eligibility_criteria_content9">Minimum Educational Qualification for Primary Teacher (Classes I- V: Primary Stage)</string>
    <string name="eligibility_criteria_content10">Minimum Educational qualification for Graduate Teacher for (Classes VI-VIII: Elementary Stage)</string>
    <string name="syllabus_content1">Telangana TET syllabus 2021 is provided below, the candidates should prepare according to the syllabus to qualify for Telangana TET exam. Detailed knowledge of Syllabus is mandatory for each candidate to prepare for STET Telangana 2021 Exam.</string>
    <string name="global__phone_no">Phone no</string>
    <string name="page_1_login">Login</string>
    <string name="page_1_signup">Sign up</string>
    <string name="global__next">Next</string>
    <string name="global__select">select</string>
    <string name="global__application_category">Job Application Category</string>
    <string name="global__exam_language">Exam Language</string>
    <string name="global__tenth_percentage">Tenth Percentage </string>
    <string name="global__twelfth_percentage">Twelfth Percentage </string>
    <string name="global__bse_ba_percentage">B.Sc/B.A Percentage </string>
    <string name="global__bed_percentage">B.Ed Percentage </string>
    <string name="global__prof_qualification">Professional Qualification</string>
    <string name="global__university">University</string>
    <string name="global__back">Back</string>
    <string name="global__submit">Submit</string>
    <string name="personal_info_form_activity__cb">I have read and understood all the instructions.</string>
    <string name="page_5_aca_info">Academic Information</string>
    <string name="update_personal_detail">Update Personal Detail</string>
    <string name="update_professional_detail">Update Professional Detail</string>
    <string name="update_payment_detail">Update Payment Detail</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password_bt">Forgot</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="update_documents_detail">Update Documents Detail</string>
</resources>