<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/register_image"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/stet_logo">

        </ImageView>

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/global__stet_title"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_personal"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:textSize="17sp"
                android:text="@string/update_personal_detail"/>


            <Button
                android:id="@+id/register_professional"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:textSize="17sp"
                android:text="@string/update_professional_detail" />


            <Button
                android:id="@+id/register_documents"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:textSize="17sp"
                android:text="@string/update_documents_detail" />


            <Button
                android:id="@+id/register_payment"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:textSize="17sp"
                android:text="@string/update_payment_detail" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/register_back"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="50dp"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:textSize="17sp"
                    android:background="@drawable/button_shape"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/global__back"/>

                <Button
                    android:id="@+id/register_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="90dp"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:textSize="17sp"
                    android:background="@drawable/button_shape"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/global__submit"

                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>