<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/page_1_image"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/stet_logo">

    </ImageView>

    <TextView
        android:id="@+id/page_1_text_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/global__stet_title"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page_1_phone"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:text="@string/global__phone_no"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/page_1_phn_et"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:background="@drawable/box"
                android:inputType="phone"
                android:textSize="15sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/page_1_pass"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/page_1_Edtpass"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:paddingStart="10dp"
                android:layout_height="40dp"
                android:background="@drawable/box"
                android:inputType="textPassword"
                android:textSize="15sp">
            </EditText>
        </LinearLayout>

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/remember_me"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/page_1_login"
                android:layout_width="wrap_content"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textSize="17sp"
                android:text="@string/page_1_login" />

            <Button
                android:id="@+id/page_1_signup"
                android:layout_width="wrap_content"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:layout_height="40dp"
                android:layout_marginLeft="93dp"
                android:background="@drawable/button_shape"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textSize="17sp"
                android:text="@string/page_1_signup">

            </Button>
        </LinearLayout>
        <Button

            android:id="@+id/page_1_forget"
            android:layout_width="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_marginTop="10sp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textSize="17sp"
            android:text="@string/forget_password_bt">

        </Button>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:layout_marginStart="230dp"
            android:id="@+id/homepage_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/change_language"
            android:textStyle="bold"
            android:textColor="#F42738"
            android:textSize="16sp"

            />

    </LinearLayout>


</LinearLayout>